--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#30b0d0</color>
+    <color name="colorPrimaryDark">#4080a0</color>
+    <color name="colorAccent">#fe6b0c</color>
+
+    <color name="colorWhite">#ffffffff</color>
+    <color name="colorWhiteLite">#55ffffff</color>
+    <color name="colorGrey">#ff737373</color>
+    <color name="resolutionColor">#ffffffff</color>
+    <color name="resolutionBackground">#ff000000</color>
 </resources>
