--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="text_padding_micro">2dp</dimen>
     <dimen name="text_padding_small">4dp</dimen>
     <dimen name="text_padding_middle">8dp</dimen>
+    <dimen name="item_image_height">48dp</dimen>
 </resources>
