--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -9,22 +9,23 @@
     android:gravity="center_vertical">
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="86dp"
         android:layout_height="@dimen/item_image_height"
         android:id="@+id/image"
         android:layout_weight="0"
+        android:scaleType="fitCenter"
         />
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_margin="@dimen/padding_middle">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/title"
             android:text="Title"
-            android:layout_margin="@dimen/text_margin"
             android:textAppearance="?attr/textAppearanceListItem"
             />
 
@@ -33,6 +34,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/resolutions"
             android:orientation="horizontal"
+            android:layout_marginTop="@dimen/padding_micro"
             />
 
     </LinearLayout>
@@ -43,7 +45,8 @@
         android:id="@+id/button"
         android:layout_weight="0"
         app:srcCompat="@drawable/ic_download"
-        style="?selectableItemBackgroundBorderless"
+        android:background="?selectableItemBackgroundBorderless"
+        android:padding="@dimen/padding_middle"
         />
     <android.support.v4.widget.ContentLoadingProgressBar
         android:layout_width="wrap_content"
