--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/layout_item"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical"
+    android:background="?selectableItemBackground">
 
     <ImageView
         android:layout_width="86dp"
