--- a/app/src/main/res/layout/activity_apikey.xml
+++ b/app/src/main/res/layout/activity_apikey.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btnLoad"
-        android:text="@string/load_videos"
+        android:text="@string/load_project"
         android:enabled="false"
         />
 
