--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,10 @@
     <dimen name="padding_middle">8dp</dimen>
     <dimen name="padding_large">16dp</dimen>
     <dimen name="padding_vary_large">32dp</dimen>
+
+    <dimen name="text_micro">8sp</dimen>
+    <dimen name="text_mini">12sp</dimen>
+    <dimen name="text_middle">16sp</dimen>
+    <dimen name="text_large">24sp</dimen>
+    <dimen name="text_vary_large">32sp</dimen>
 </resources>
