--- a/app/src/main/res/layout/fragment_media.xml
+++ b/app/src/main/res/layout/fragment_media.xml
@@ -14,54 +14,66 @@
             android:layout_height="240dp"
             android:id="@+id/video_container"
             />
-
-        <TextView
-            android:layout_width="wrap_content"
+        
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/media_title"
-            android:text="media_title"
-            android:textStyle="bold"
-            android:textSize="@dimen/text_large"
-            />
+            android:layout_margin="@dimen/padding_middle">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/media_resolution"
-            android:text="@string/media_resolution"
-            android:textSize="@dimen/text_middle"
-            />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_margin="@dimen/padding_middle">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/media_quality"
-            android:text="@string/media_quality"
-            android:textSize="@dimen/text_middle"
-            />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/media_title"
+                    android:text="media_title"
+                    android:textStyle="bold"
+                    android:textSize="@dimen/text_large"
+                    />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/media_duration"
-            android:text="@string/media_duration"
-            android:textSize="@dimen/text_middle"
-            />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/media_resolution"
+                    android:text="@string/media_resolution"
+                    android:textSize="@dimen/text_middle"
+                    />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/media_mediastatus"
-            android:text="@string/media_mediastatus"
-            android:textSize="@dimen/text_middle"
-            />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/media_quality"
+                    android:text="@string/media_quality"
+                    android:textSize="@dimen/text_middle"
+                    />
 
-        <Spinner
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/spinner"
-            android:layout_gravity="right"
-            />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/media_duration"
+                    android:text="@string/media_duration"
+                    android:textSize="@dimen/text_middle"
+                    />
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/media_mediastatus"
+                    android:text="@string/media_mediastatus"
+                    android:textSize="@dimen/text_middle"
+                    />
+
+                <Spinner
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/spinner"
+                    android:layout_gravity="right"
+                    />
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
     </LinearLayout>
 </ScrollView>
