--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,45 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/layout_item"
-    android:gravity="center_vertical"
-    android:background="?selectableItemBackground">
+    android:id="@+id/card_item"
+    android:layout_margin="@dimen/padding_small">
 
-    <ImageView
-        android:layout_width="86dp"
-        android:layout_height="@dimen/item_image_height"
-        android:id="@+id/image"
-        android:layout_weight="0"
-        android:scaleType="fitCenter"
-        />
     <LinearLayout
-        android:layout_width="0dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        android:layout_margin="@dimen/padding_middle">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/title"
-            android:text="Title"
-            android:lines="1"
-            android:ellipsize="end"
-            android:textAppearance="?attr/textAppearanceListItem"
+        android:id="@+id/layout_item"
+        android:gravity="center_vertical"
+        android:background="?selectableItemBackground"
+        android:layout_margin="@dimen/padding_small">
+
+        <ImageView
+            android:layout_width="86dp"
+            android:layout_height="@dimen/item_image_height"
+            android:id="@+id/image"
+            android:layout_weight="0"
+            android:scaleType="fitCenter"
             />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/resolutions"
-            android:orientation="horizontal"
-            android:layout_marginTop="@dimen/padding_micro"
-            />
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:layout_margin="@dimen/padding_middle">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/title"
+                android:text="Title"
+                android:lines="1"
+                android:ellipsize="end"
+                android:textAppearance="?attr/textAppearanceListItem"
+                />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/resolutions"
+                android:orientation="horizontal"
+                android:layout_marginTop="@dimen/padding_micro"
+                />
+        </LinearLayout>
     </LinearLayout>
-
-</LinearLayout>
+</android.support.v7.widget.CardView>
