--- a/app/src/main/res/layout/textview_rez.xml
+++ b/app/src/main/res/layout/textview_rez.xml
@@ -12,5 +12,5 @@
     android:layout_margin="@dimen/padding_micro"
     android:lines="1"
     android:ellipsize="end"
-    android:textSize="@dimen/text_middle"
+    android:textSize="@dimen/text_mini"
     />
