--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,7 +5,8 @@
     <dimen name="nav_header_height">160dp</dimen>
     <dimen name="half_width">360dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
-    <dimen name="item_image_height">48dp</dimen>
+    <dimen name="item_image_width">96dp</dimen>
+    <dimen name="item_image_height">54dp</dimen>
 
     <dimen name="padding_micro">2dp</dimen>
     <dimen name="padding_small">4dp</dimen>
