--- a/app/src/main/res/layout/fragment_folder.xml
+++ b/app/src/main/res/layout/fragment_folder.xml
@@ -30,12 +30,12 @@
     </LinearLayout>
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/tvEmpty"
         android:text="@string/empty"
-        android:gravity="center"
         android:visibility="gone"
+        android:layout_gravity="center"
         />
 
     <com.github.clans.fab.FloatingActionMenu
